fix always-on scrollbars

--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -107,7 +107,7 @@ h1 a {
 	color: #555555;
 	font: helvetica;
 	font-size: 14pt;
-  overflow: scroll;
+  overflow: auto;
 }
 .maincontent {
 	margin-left: auto;
@@ -117,7 +117,7 @@ h1 a {
 	color: #555555;
 	font: helvetica;
 	font-size: 14pt;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .roadtrip_pin {
